Fix line spacing

--- a/styles.css
+++ b/styles.css
@@ -517,7 +517,7 @@ form input, form select, form button {
     text-align: center;
     position: absolute;
     width: 100%;
-    bottom: 10px;
+    top: 380px;
 }
 
 .date-location, .countdown-text {
@@ -528,8 +528,8 @@ form input, form select, form button {
 
 .date-location {
     font-size: 1.4em;
-    margin-bottom: 50px;
-    padding-top: 50px;
+    margin-bottom: 30px;
+    padding-top: 65px;
 }
 
 .countdown-text {
